--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ spacy
 scikit-learn
 pandas
 numpy
+streamlit
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
