--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 joblib
 spacy
 scikit-learn
-streamlit
+nltk
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
